--- a/assets/css/_services.scss
+++ b/assets/css/_services.scss
@@ -4,24 +4,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     &-title {
         @include titles;
         margin: 0% 4% 40px 4%;
         align-self: flex-start;
     }
-    
     &-carousel {
         width: 96%;
         display: flex;
         display: flex;
         align-items: center;
         justify-content: space-between;
-
         @media (max-width: 900px) {
             width: 92%;
         }
-
         .services-button-prev {
             height: 40px;
             transform: rotate(270deg);
@@ -29,80 +25,65 @@
             appearance: unset;
             border: none;
             background: unset;
-    
             &:focus {
                 outline: none;
             }
-
             @media (max-width: 900px) {
                 display: none;
             }
         }
-    
         .services-slick {
             width: 90%;
-
             @media (max-width: 900px) {
                 width: 100%;
             }
-            
             .services-card {
-                height: 300px;
+                height: 350px;
                 margin: 0px 10px;
                 background-color: $dark-blue;
                 padding: 20px;
-
                 @media (max-width: 1400px) {
-                    height: 350px;
-                }
-
-                @media (max-width: 1200px) {
-                    height: 430px;
-                }
-
-                @media (max-width: 1050px) {
                     height: 400px;
                 }
-
+                @media (max-width: 1200px) {
+                    height: 480px;
+                }
+                @media (max-width: 1050px) {
+                    height: 450px;
+                }
                 @media (max-width: 900px) {
+                    height: 400px;
+                }
+                @media (max-width: 630px) {
                     height: 350px;
                 }
-
-                @media (max-width: 630px) {
-                    height: 300px;
-                }
-                
                 @media (max-width: 420px) {
-                    height: 380px;
+                    height: 420px;
                 }
-
                 color: #DEE3E8;
-
                 &:focus {
                     outline: none;
                 }
-
                 img {
                     width: 70px;
                 }
-
                 h3 {
                     font-family: century-gothic, sans-serif;
                     font-weight: 400;
                     font-size: 16px;
                     margin: 20px 0px;
+                    text-align: justify;
                 }
-
                 p {
                     font-family: century-gothic, sans-serif;
                     font-weight: 600;
                     font-size: 12px;
                     letter-spacing: 1px;
                     margin: 0%;
+                    text-align: justify;
                 }
             }
         }
-        
         .services-button-next {
             height: 40px;
             transform: rotate(90deg);
@@ -110,15 +91,12 @@
             appearance: unset;
             border: none;
             background: unset;
-        
             &:focus {
                 outline: none;
             }
-
             @media (max-width: 900px) {
                 display: none;
             }
         }
     }
-
 }
